[package]
name = "dht11"
version = "0.1.0"
authors = ["uhkay"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "dht11"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
dht-sensor = "0.2.1"
esp-idf-hal = "0.44.1"
esp-idf-svc = "0.49.1"
esp-idf-sys = "0.35.0"
log = "0.4.22"


[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
